--- a/Lesson3/task3.1.html
+++ b/Lesson3/task3.1.html
@@ -19,7 +19,9 @@
             else if (i % 2 == 0) {
                 console.log(i + " - чётное число")
             }
-            else (console.log(i + " - нечётное число"))
+            else {
+                console.log(i + " - нечётное число")
+            }
         }
 
     </script>
